src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>CS_Reason_to_Contact__c</fullName>
        <label>Reason to Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge Article</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Recent_Private_Comment_Postedby__c</fullName>
        <description>**** Recent Private Comments are Captured on this Field for Notification Purposes ******</description>
        <label>Recent Private Comment Postedby</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Recent_Private_Comment_Posteddate__c</fullName>
        <description>***Recently Posted Private Comment Date *****</description>
        <label>Recent Private Comment Posted date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CS_Recent_Private_Comment__c</fullName>
        <description>*** Most Recent Private Comments are Captured on this Field *****</description>
        <label>Recent Private Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CS_Recent_Public_Case_Comment_Source__c</fullName>
        <description>***** Service Cloud Recent Public Comment Posted *****</description>
        <label>Recent Public Case Comment Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Recent_Public_Case_Comment__c</fullName>
        <description>Most Recent Public Case Comment - updated from workflow</description>
        <label>Recent Public Case Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CS_Recent_Public_Comment_Postedby__c</fullName>
        <label>Recent Public Comment Postedby</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Recent_Public_Comment_Posteddate__c</fullName>
        <description>**** When Public Comment is posted on case This field get  updated *****</description>
        <label>Recent Public Comment Posteddate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CS_Restoration_Action_Plan_reason__c</fullName>
        <label>Restoration Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Initial Severity Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Requested Modification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unresponsive Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restoration not captured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restoration incorrectly captured</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Restoration_Milestone_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mark Restoration Complete</inlineHelpText>
        <label>Restoration Milestone Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Restoration_Plan_Comments__c</fullName>
        <description>Restoration Plan Comments</description>
        <label>Restoration Plan Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CS_Restoration_Plan_Status__c</fullName>
        <description>Restoration Plan Status</description>
        <label>Restoration Plan Status</label>
        <picklist>
            <picklistValues>
                <fullName>Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_RightNow_Date_Last_Responded__c</fullName>
        <label>RN Date Last Responded</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CS_RightNow_ID__c</fullName>
        <externalId>true</externalId>
        <label>RN ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CS_RightNow_Initial_Severity__c</fullName>
        <label>RN Initial Severity</label>
        <picklist>
            <picklistValues>
                <fullName>1-Blocker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-Minor</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_RightNow_Normalized_Severity__c</fullName>
        <label>RN Normalized Severity</label>
        <picklist>
            <picklistValues>
                <fullName>1-Blocker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-Minor</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_RightNow_Product_Level_1__c</fullName>
        <label>RN Product Level 1</label>
        <picklist>
            <picklistValues>
                <fullName>ClaimCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PolicyCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BillingCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire Resource Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legacy Data Management (Millbrook)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitchell Extension Packs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Portals</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_RightNow_Product_Level_2__c</fullName>
        <label>RN Product Level 2</label>
        <picklist>
            <picklistValues>
                <fullName>ClaimCenter 4.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClaimCenter 3.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PolicyCenter 1.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PolicyCenter 2.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BillingCenter 1.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClaimCenter 2.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClaimCenter 5.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PolicyCenter 2.5.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BillingCenter 2.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PolicyCenter 3.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PolicyCenter 4.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BillingCenter 3.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClaimCenter 6.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JIRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RightNow Cx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security &amp; Permissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InetSoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ScrumWorks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Requests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Requests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SQL Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tomcat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebSphere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebLogic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jetty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rally</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_RightNow_Product_Version__c</fullName>
        <label>RN Product Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_RightNow_Reference_Number__c</fullName>
        <label>RN Reference Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_RightNow_Requested_Version__c</fullName>
        <label>RN Requested Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_RightNow_Resolution_Code__c</fullName>
        <label>RN Resolution Code</label>
        <picklist>
            <picklistValues>
                <fullName>Solution Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functionality Clarified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Could Not Reproduce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform Gap JIRA Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bug JIRA Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform JIRA Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Direction Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doc. JIRA Created</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Right_Now_Status_Type__c</fullName>
        <label>RN Status Type</label>
        <picklist>
            <picklistValues>
                <fullName>Closed/Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unresolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_SLA_Comments__c</fullName>
        <label>SLA Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CS_SLA_Exclusion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SLA Exclusion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_SLA_Override_Comment__c</fullName>
        <label>SLA Override Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_SLA_Response_Override_Status__c</fullName>
        <label>SLA Response Override Status</label>
        <picklist>
            <picklistValues>
                <fullName>Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Secondary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Secondary  Customer Contact on Case</inlineHelpText>
        <label>Secondary Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Support</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Secondary Contact)</relationshipLabel>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_Secondary_Support_Contact__c</fullName>
        <formula>Asset.CS_Sec_Support_Partner__r.FirstName +&apos; &apos;+ Asset.CS_Sec_Support_Partner__r.LastName</formula>
        <label>Secondary Support Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Severity_Change_Reason__c</fullName>
        <inlineHelpText>Severity Change Reason</inlineHelpText>
        <label>Severity Change Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Initial severity incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Requested Modification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unresponsive Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Severity</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Sister_Jira_URL__c</fullName>
        <description>Holds Sister Jira Url</description>
        <label>Sister Jira URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CS_Solution__c</fullName>
        <description>The ultimate solution to this Incident</description>
        <inlineHelpText>The ultimate solution to this Incident</inlineHelpText>
        <label>Solution</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CS_Standard_Product__c</fullName>
        <formula>Product.Name</formula>
        <label>Standard Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Submitted_as_KB_Article__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted as KB Article</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Submitted_by__c</fullName>
        <formula>If(OR($User.ProfileId=&apos;00e34000001OX7Z&apos;,$User.ProfileId=&apos;00e34000001OX7e&apos;), Contact.FirstName + &apos; &apos; + Contact.LastName, CreatedBy.FirstName +&apos; &apos;+ CreatedBy.LastName)</formula>
        <label>Submitted by</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Support_Group__c</fullName>
        <formula>TEXT(Asset.CS_Support_Group__c )</formula>
        <label>Support Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Survey_Base_URL__c</fullName>
        <formula>CASE( Environment_Affected__c ,&apos;Production&apos;, $Setup.CS_Community_Survey_URL__c.CS_Customer_Community_URL__c &amp;&apos;TakeSurvey?Id=&apos;&amp; $Setup.CS_Community_Survey_URL__c.CS_Customer_Survey_Id__c &amp;&apos;&amp;cId=&apos;&amp;ContactId &amp;&apos;&amp;caId=&apos;&amp;Id,
 &apos;Implementation&apos;, $Setup.CS_Community_Survey_URL__c.CS_Customer_Community_URL__c &amp;&apos;TakeSurvey?Id=&apos;&amp; $Setup.CS_Community_Survey_URL__c.CS_Enablement_Survey__c &amp;&apos;&amp;cId=&apos;&amp;ContactId &amp;&apos;&amp;caId=&apos;&amp;Id,&apos;NA&apos;)</formula>
        <label>Survey Base URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Synopsis_of_Issue__c</fullName>
        <description>Field to capture Synopsis of issue</description>
        <label>Synopsis of Issue</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CS_Tertiary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Tertiary  Customer Contact Case</inlineHelpText>
        <label>Tertiary Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Support</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Primary Contact)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_Third_pty_ref_no__c</fullName>
        <inlineHelpText>**********Required for  Jira Integration ************</inlineHelpText>
        <label>Third party ref no</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Time_since_Date_Last_Updated__c</fullName>
        <formula>now() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time since Date Last Updated (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CS_Time_since_Date_Opened__c</fullName>
        <formula>Now() -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time since Date Opened (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CS_Urgency__c</fullName>
        <description>Specify how urgently this particular Issue needs a solution</description>
        <inlineHelpText>Specify how urgently this particular Issue needs a solution</inlineHelpText>
        <label>Urgency</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immediate</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**** Service Cloud  ****</description>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Version__c</fullName>
        <formula>CS_Product_Version__r.Name</formula>
        <inlineHelpText>Product Version</inlineHelpText>
        <label>Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseCon_Access_Type__c</fullName>
        <formula>IF(  OR(ISPICKVAL( Contact.CS_Access_Type__c , &apos;General Customer&apos;),ISPICKVAL( Contact.CS_Access_Type__c , &apos;Customer Support&apos;),ISPICKVAL( Contact.CS_Access_Type__c , &apos;Customer Support (View Only)&apos;),ISPICKVAL( Contact.CS_Access_Type__c , &apos;Prospect&apos;))  , Contact.FirstName + &apos; &apos; + Contact.LastName + &apos; (Customer)&apos; ,  IF(OR(ISPICKVAL( Contact.CS_Access_Type__c , &apos;General Partner&apos;),ISPICKVAL( Contact.CS_Access_Type__c , &apos;Partner&apos;)), Contact.FirstName + &apos; &apos; + Contact.LastName + &apos; (Partner)&apos; ,  IF(ISPICKVAL( Contact.CS_Access_Type__c , &apos;Employee&apos;), Contact.FirstName + &apos; &apos; + Contact.LastName + &apos; (Employee)&apos;, &apos; &apos;) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact (Access Type)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Escalator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Escalator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>Case Type</label>
        <picklist>
            <picklistValues>
                <fullName>Defect</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Accelerator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best Practise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulletin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Database</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform Compatibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal/Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tools</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Communication_Channel__c</fullName>
        <inlineHelpText>channel of communication for a response</inlineHelpText>
        <label>Communication Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Complexity__c</fullName>
        <label>Complexity</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consulting_Fees__c</fullName>
        <label>Consulting Fees</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_signed_by_Partner__c</fullName>
        <label>Contract signed by Partner</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Customer Account)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Reference__c</fullName>
        <description>Combination of  RightNow Refrence Number  and   Customer Reference #</description>
        <formula>CS_RightNow_Reference_Number__c &amp;&quot; : &quot;&amp;  CS_Customer_Reference_Number__c</formula>
        <label>Customer/Reference #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Representative_Email__c</fullName>
        <formula>Customer_Representative__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Representative Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Representative</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Customer_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Environment_Affected__c</fullName>
        <label>Environment Affected</label>
        <picklist>
            <controllingField>Asset_Type__c</controllingField>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Remote Consulting Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Expenses__c</fullName>
        <label>Estimated Expenses</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GW_Status__c</fullName>
        <label>GW Status</label>
        <picklist>
            <controllingField>Asset_Type__c</controllingField>
            <picklistValues>
                <fullName>GW In Progress - In Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GW In Progress - In Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GW In Progress - In Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GW In Progress - Awaiting Install</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Contact_Name__c</fullName>
        <formula>IF( Contact.pse__Salesforce_User__c = $User.Id,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Contact Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Link_to_Files__c</fullName>
        <label>Link to Files</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Internal_Case_Comment__c</fullName>
        <description>Most Recent Internal Case Comment</description>
        <label>Most Recent Internal Case Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Private_Case_Comment__c</fullName>
        <description>Most Recent Private Case Comment</description>
        <label>Most Recent Private Case Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Customer_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Comment__c</fullName>
        <label>Other Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Fees__c</fullName>
        <label>Other Fees</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Partner Account)</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority_Score__c</fullName>
        <label>Priority Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>